# dank-py

./: .gitignore  LICENSE  README.md  pyproject.toml
agent-examples/: README.md
agent-examples/01-multi-agent-mixed-repo/: README.md  custom_openai_agent.py  dank.config.json  langchain_tool_agent.py  langgraph_state_agent.py  requirements.lock.txt  requirements.txt
agent-examples/02-crewai-kickoff-agent/: README.md  crewai_agent.py  dank.config.json  requirements.lock.txt  requirements.txt
agent-examples/03-pydanticai-structured-agent/: .dankignore  README.md  dank.config.json  pydanticai_agent.py  requirements.lock.txt  requirements.txt
agent-examples/04-llamaindex-query-agent/: README.md  dank.config.json  llamaindex_agent.py  requirements.lock.txt  requirements.txt
agent-examples/05-langgraph-websearch-agent/: README.md  dank.config.json  requirements.lock.txt  requirements.txt  websearch_agent.py
docker/: Dockerfile  default_index.py  entrypoint.py  requirements-runtime.txt
src/dank_py/: __init__.py  cli.py
src/dank_py/lib/: __init__.py  constants.py
src/dank_py/lib/cli/: build.py  bundle_routing.py  clean.py  deps.py  init.py  inspect.py  logs.py  production_build.py  run.py  status.py  (+1 more)
src/dank_py/templates/: __init__.py  dank.config.json
src/dank_runtime/: __init__.py  constants.py  engine.py  logging.py
tests/: test_cli.py  test_config.py  test_docker_manager_availability.py  test_docker_manager_cleanup.py  test_docker_manager_logs.py  test_logs_cli.py  test_run_env.py  test_runtime_invocation.py  test_runtime_logging.py  test_validation.py
(+10 files in other folders)
